# aicad-mcp

./: CHANGES.md  CLAUDE.md  FIXES_SUMMARY.md  README.md  enhanced_wrench_designer.py  fallback_wrench_designer.py  fix_summary.md  freecad_error_fixes.md  mcp-server.py  pyproject.toml  screenshot_analysis_features.md  test_enhancements.py  web_step_import.md
addon/FreeCADMCP/: InitGui.py
addon/FreeCADMCP/core/: client.py  rpc_handler.py  rpc_proxy.py  rpc_server.py  task_queue.py  tool_schemas.py
addon/FreeCADMCP/dfm/: base_checker.py  cnc_check12.py  injectm_check3.py  tdp_check3.py
addon/FreeCADMCP/prompts/: Taiyaki AI - DFM Rules for MCP - 3D Printing.csv  Taiyaki AI - DFM Rules for MCP - CNC Machining.csv  Taiyaki AI - DFM Rules for MCP - Injection Molding.csv  __init__.py  boolean_operations.py  feature_modeling.py  pattern_generation.py  printing_guidelines.py
addon/FreeCADMCP/ui/: settings_dialog.py  widget.py
addon/FreeCADMCP/utils/: parts.py
addon/FreeCADMCP/workbench/: commands.py
src/freecad_mcp/: __main__.py  advanced_cad_operations.py  design_validation_system.py  enhanced_server.py  enhanced_spatial_framework.py  manufacturing_framework.py  server.py
src/freecad_mcp/prompts/: Taiyaki AI - DFM Rules for MCP - 3D Printing.csv  Taiyaki AI - DFM Rules for MCP - CNC Machining.csv  Taiyaki AI - DFM Rules for MCP - Injection Molding.csv  printing_guidelines.py
