[project]
name = "freecad-mcp"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.4.1",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]

[project.scripts]
freecad-mcp = "freecad_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
